[DATASOURCES] -Primera aproximación a los datasources de Entity Framework para rellenar las listas de equipos y jugadores.

--- a/Editor PCBasket - Mou/Editor PCBasket - Mou.csproj
+++ b/Editor PCBasket - Mou/Editor PCBasket - Mou.csproj
@@ -160,6 +160,8 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\EpcbModel.Equipo.datasource" />
+    <None Include="Properties\DataSources\EpcbModel.Jugador.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
